Modify: service tests